--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,9 @@ oauth2client>=4.1.3
 pyairtable>=2.1.0
 python-dotenv>=1.0.0
 pandas>=2.1.0
-google-auth-oauthlib>=1.0.0
+google-auth-oauthlib>=1.0.0 
 beautifulsoup4>=4.12.0
-requests>=2.31.0 
+requests>=2.31.0
+reportlab>=4.0.0
+jinja2>=3.1.0
+openai>=1.0.0 
