--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ python-multipart==0.0.6
 gspread==5.12.0
 google-auth==2.23.4
 google-auth-oauthlib==1.1.0
+google-auth-httplib2==0.1.1
+google-api-python-client==2.108.0
 
 # Data validation and settings
 pydantic==2.5.0
