--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,14 @@ fastapi-mail==1.4.1
 # Environment variables
 python-dotenv==1.0.0
 
+# Web scraping for metadata analysis
+aiohttp==3.9.1
+beautifulsoup4==4.12.2
+
 # Development and testing
 pytest==7.4.3
 pytest-asyncio==0.21.1
-httpx==0.25.2 
+httpx==0.25.2
+
+# OpenAI integration for AI-powered insights
+openai==1.3.7 
