--- a/env.example
+++ b/env.example
@@ -9,6 +9,9 @@ GOOGLE_REDIRECT_URI=http://localhost:8000/auth/google/callback
 SUPABASE_URL=your_supabase_url_here
 SUPABASE_KEY=your_supabase_anon_key_here
 
+# OpenAI Configuration
+OPENAI_API_KEY=your_openai_api_key_here
+
 # JWT Settings
 SECRET_KEY=your-super-secret-key-change-this-in-production
 ALGORITHM=HS256
